--- a/app/ui/navbar/navbar.module.css
+++ b/app/ui/navbar/navbar.module.css
@@ -3,6 +3,7 @@
   padding: calc(var(--base-space) * 2) calc(var(--base-space) * 10);
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .navbar {
@@ -82,6 +83,7 @@
   flex-direction: column;
   height: 100%;
   justify-content: center;
+  margin-top: -4.5rem;
 }
 
 .hamburgerItem {
@@ -101,7 +103,7 @@
 
   .navbar,
   .navbarHamburger {
-    padding: calc(var(--base-space) * 2) calc(var(--base-space) * 5);
+    padding: calc(var(--base-space) * 2) calc(var(--base-space) * 4);
   }
 
   .navItems {
