--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -56,6 +56,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 html {
   height: 100%;
+  font-size: 1rem;
 }
 
 body {
@@ -65,14 +66,22 @@ body {
 
 h1 {
   font-size: 2rem;
-  margin-bottom: 2rem;
 }
 
 h2 {
   font-size: 1.5rem;
+}
+
+h2,
+h3 {
   margin-bottom: 1.5rem;
 }
 
+h3 {
+  font-size: 1.25rem;
+}
+
+h1,
 p,
 ul,
 ol {
